--- a/views/edit-held/kleidung.jade
+++ b/views/edit-held/kleidung.jade
@@ -6,6 +6,14 @@ html(lang="de")
 		include ../inc-bootstrap
 		title Rüstkammer
 		link(rel="stylesheet", href="/dcm-display.css")
+		style.
+			input[type='number'] {
+				width: 3em;
+				text-align: center;
+			}
+			#be {
+				width: 4em;
+			}
 		//-style.
 			#liste {
 				list-style-type: none;
@@ -38,6 +46,39 @@ html(lang="de")
 			form(action="/kleidung/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 
+				section.panel.panel-default
+					.panel-heading.dcm-caption Rüstungen
+					.panel-body
+					.panel-footer
+						.row.container-fluid
+							.col-xs-2.col-sm-1
+								button(type="button").btn.btn-default.fa.fa-plus
+							.col-xs-10.col-sm-11
+								.row
+									.col-xs-3.col-sm-1
+										input#ko(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-sm-1
+										input#br(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-sm-1
+										input#ru(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-sm-1
+										input#ba(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-sm-1
+										input#la(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-sm-1
+										input#ra(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-sm-1
+										input#lb(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-sm-1
+										input#rb(type="number", min="0", step="1", value="0")
+									.col-xs-3.col-xs-offset-6.col-sm-1.col-sm-offset-1
+										input#rs(type="number", min="0", step="0.1", value="0")
+									.col-xs-3.col-sm-2
+										input#be(type="number", min="0", step="0.05", value="0")
+
+				.row.well.text-center
+					.col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4.text-center
+						button.btn.btn-success.form-control(type="submit", disabled) speichern
 				//-table.data-section.eigenschaften
 					caption Rüstungen
 					colgroup
@@ -117,9 +158,6 @@ html(lang="de")
 									td
 										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][BE]", min="0", step="0.05", value=__rst.BE)
 									td
-
-				.mitte
-					button(type="submit", disabled) speichern
 
 			form.row.well(action="/waffen/Kleidung/"+_Held._id, method="post", accept-charset="utf-8")
 				.col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4.text-center
