--- a/views/edit-held/talente.jade
+++ b/views/edit-held/talente.jade
@@ -1,27 +1,143 @@
-- function getTalent(_charlist, _stdTalent) { 
-- 	var l = _charlist ? _charlist.length : 0; 
-- 	while (l--) { 
-- 		if (_charlist[l].name === _stdTalent.name) {
-- 			return _charlist[l];
-- 		}
-- 	} 
-- 	return { wert: 0, AT: 0, PA: 0 }; 
-- }
-- 
-- function isAvailable(_charlist, _stdTalent) { 
-- 	var l = _charlist ? _charlist.length : 0; 
-- 	if (_stdTalent.standard) {
+- function isAvailable(__list, __talent) { 
+- 	var l = __list ? __list.length : 0; 
+- 	if (__talent.standard) {
 - 		return true;
 - 	}
 - 	while (l--) { 
-- 		if (_charlist[l].name === _stdTalent.name) {
+- 		if (__list[l].name === __talent.name) {
 - 			return true; 
 - 		}
 - 	} 
 - 	return false; 
 - }
 
-mixin talenttable(__titel, __data, __name)
+mixin talentTable(__group, __name)
+	.panel-heading
+		.row
+			.col-xs-6.col-sm-8.col-lg-10 Talent
+			.col-xs-3.col-sm-2.col-lg-1 Lern
+			.col-xs-3.col-sm-2.col-lg-1 TaW
+	ul.list-group
+	each __talent, __idx in __group
+		- var __heldentalent = getTalent(_Held.Talente.__name, {talent:__talent.name})
+		- var __isAvailable  = isAvailable(_Held.Talente.__name, __talent)
+		li.list-group-item
+			.row(data-name="Talente[#{__name}][#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
+				.col-xs-1
+					input.unlock(type="hidden", name="Talente[#{__name}][#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+					if __talent.standard
+						input(type="hidden", name="Talente[#{__name}][#{__idx}][name]", value=__talent.name)
+					else
+						input.isactive(type="checkbox", name="Talente[#{__name}][#{__idx}][name]", value=__talent.name, id="fk"+__idx, checked=__isAvailable)
+				.col-xs-5.col-sm-7.col-lg-9.text-left
+					label(for="fk"+__idx)=__talent.name
+				.col-xs-3.col-sm-2.col-lg-1
+					select.unlock(size="1", name="Talente[#{__name}][#{__idx}][Lernstufe]", disabled=!__isAvailable)
+						each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
+							option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
+				.col-xs-3.col-sm-2.col-lg-1
+					input.unlock(type="number", name="Talente[#{__name}][#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+
+
+include ../inc-mixins
+
+doctype html
+html(lang="de")
+	head
+		include ../inc-bootstrap
+		title Rüstkammer
+		link(rel="stylesheet", href="/dcm-display.css")
+		style.
+			body {
+				padding-top:    60px;
+			}
+			input[type='number'] {
+				text-align: 	center;
+			}
+	body#top
+		include inc/nav
+		header.container
+			h1.page-header.text-center=_Held.Person.Name
+				
+		main.container
+			ul#tab-header.nav.nav-tabs.nav-justified
+				li
+					a(href="#Nahkampf", data-toggle="pill") Nahkampf
+				li
+					a(href="#Fernkampf", data-toggle="pill") Fernkampf
+				li
+					a(href="#Koerper", data-toggle="pill") Körper
+				li
+					a(href="#Gesellschaft", data-toggle="pill") Gesellschaft
+				li
+					a(href="#Natur", data-toggle="pill") Natur
+				li
+					a(href="#Wissen", data-toggle="pill") Wissen
+				li
+					a(href="#Handwerk", data-toggle="pill") Handwerk
+				li
+					a(href="#Sprachen", data-toggle="pill") Sprachen
+				li
+					a(href="#Schriften", data-toggle="pill") Schriften
+				li
+					a(href="#Gaben", data-toggle="pill") Gaben
+			.row
+				.col-lg-12 &nbsp;
+			.tab-content
+				section#Nahkampf.tab-pane.panel.panel-default.text-center
+					.panel-heading
+						.row
+							.col-xs-12.col-sm-5 Talent
+							.col-xs-3.col-sm-2 Lern
+							.col-xs-3.col-sm-2 AT-Mod
+							.col-xs-3.col-sm-2 PA-Mod
+							.col-xs-3.col-sm-1 TaW
+					ul.list-group
+					each __talent, __idx in _Nahkampf
+						- var __heldentalent = getTalent(_Held.Talente.Nahkampf, {talent:__talent.name})
+						- var __isAvailable  = isAvailable(_Held.Talente.Nahkampf, __talent)
+						li.list-group-item
+							.row(data-name="Talente[Nahkampf][#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
+								.col-xs-1
+									input.unlock(type="hidden", name="Talente[Nahkampf][#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+									if __talent.standard
+										input(type="hidden", name="Talente[Nahkampf][#{__idx}][name]", value=__talent.name)
+									else
+										input.isactive(type="checkbox", name="Talente[Nahkampf][#{__idx}][name]", value=__talent.name, id="nk"+__idx, checked=__isAvailable)
+								.col-xs-11.col-sm-4.text-left
+									label(for="nk"+__idx)=__talent.name
+								.col-xs-3.col-sm-2
+									select.unlock(size="1", name="Talente[Nahkampf][#{__idx}][Lernstufe]", disabled=!__isAvailable)
+										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
+											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
+								.col-xs-3.col-sm-2
+									input.nk-at.unlock(type="number", name="Talente[Nahkampf][#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+								.col-xs-3.col-sm-2
+									input.nk-pa.unlock(type="number", name="Talente[Nahkampf][#{__idx}][PA]", min="0", max="20", step="1", value=__heldentalent.PA, disabled=!__isAvailable)
+								.col-xs-3.col-sm-1.text-center=__heldentalent.AT+__heldentalent.PA
+
+				section#Fernkampf.tab-pane.panel.panel-default.text-center
+					+talentTable(_Fernkampf, "Fernkampf")
+
+				section#Koerper.tab-pane.panel.panel-default.text-center
+					+talentTable(_körperlich, "körperlich")
+
+				section#Gesellschaft.tab-pane.panel.panel-default.text-center
+					+talentTable(_Gesellschaft, "Gesellschaft")
+
+				section#Wissen.tab-pane.panel.panel-default.text-center
+					+talentTable(_Wissen, "Wissen")
+
+				section#Natur.tab-pane.panel.panel-default.text-center
+					+talentTable(_Natur, "Natur")
+
+				section#Handwerk.tab-pane.panel.panel-default.text-center
+					+talentTable(_Handwerk, "Handwerk")
+
+
+
+
+//-mixin talenttable(__titel, __data, __name)
 	- var __talente = _held.Talente[__name];
 	table.data-section.eigenschaften
 		caption= __titel
@@ -67,7 +183,7 @@ mixin talenttable(__titel, __data, __name)
 					td.mitte
 						input.unlock(type="number", name="Talente[#{__name}][#{key}][wert]", min="-3", max="35", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
 
-mixin languagetable(__data, __name)
+//-mixin languagetable(__data, __name)
 	- var __talente = _held.Talente[__name];
 	table.data-section.eigenschaften
 		caption= __name
@@ -105,8 +221,8 @@ mixin languagetable(__data, __name)
 					td.mitte
 						input.unlock(type="number", name="Talente[#{__name}][#{key}][wert]", min="-3", max=__stdTalent.komplexität, step="1", value=__heldentalent.wert, disabled=!__isAvailable)
 
-doctype html
-html(lang="de")
+//-doctype html
+//-html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Talentwerte bearbeiten
