--- a/views/inc-bootstrap.jade
+++ b/views/inc-bootstrap.jade
@@ -1,9 +1,9 @@
 meta(charset="utf-8")
-//- link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
-//- link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
-//- script(src="//code.jquery.com/jquery-2.1.0.min.js")
-//- script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
-link(rel="stylesheet", href="/bootstrap.min.css")
-link(rel="stylesheet", href="/font-awesome.min.css")
-script(src="/jquery-2.1.0.min.js")
-script(src="/bootstrap.min.js")
+link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
+link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+script(src="//code.jquery.com/jquery-2.1.0.min.js")
+script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+//-link(rel="stylesheet", href="/bootstrap.min.css")
+//-link(rel="stylesheet", href="/font-awesome.min.css")
+//-script(src="/jquery-2.1.0.min.js")
+//-script(src="/bootstrap.min.js")
