--- a/views/edit-held/talente.jade
+++ b/views/edit-held/talente.jade
@@ -22,21 +22,23 @@ mixin talentTable(__group, __name)
 		- var __heldentalent = getTalent(_Held.Talente.__name, {talent:__talent.name})
 		- var __isAvailable  = isAvailable(_Held.Talente.__name, __talent)
 		li.list-group-item
-			.row(data-name="Talente.#{__name}[#{__idx}].Spezialisierung", data-options=__talent.spezialisierungen.join(','))
+			.row(data-name="Talente.#{__name}[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
 				.col-xs-1
-					input.unlock(type="hidden", name="Talente.#{__name}[#{__idx}]._talent", value=__talent._id, disabled=!__isAvailable)
+					input.unlock(type="hidden", name="Talente.#{__name}[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
 					if __talent.standard
-						input(type="hidden", name="Talente.#{__name}[#{__idx}].name", value=__talent.name)
+						input(type="hidden", name="Talente.#{__name}[#{__idx}][name]", value=__talent.name)
 					else
-						input.isactive(type="checkbox", name="Talente.#{__name}[#{__idx}].name", value=__talent.name, id=__name+__idx, checked=__isAvailable)
+						input.isactive(type="checkbox", name="Talente.#{__name}[#{__idx}][name]", value=__talent.name, id=__name+__idx, checked=__isAvailable)
 				.col-xs-5.col-sm-7.col-lg-9.text-left
 					label(for=__name+__idx)=__talent.name
 				.col-xs-3.col-sm-2.col-lg-1
-					select.unlock(size="1", name="Talente.#{__name}[#{__idx}].Lernstufe", disabled=!__isAvailable)
+					select.unlock(size="1", name="Talente.#{__name}[#{__idx}][Lernstufe]", disabled=!__isAvailable)
 						each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 							option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 				.col-xs-3.col-sm-2.col-lg-1
-					input.unlock(type="number", name="Talente.#{__name}[#{__idx}].wert", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+					input.unlock(type="number", name="Talente.#{__name}[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+	.panel-footer.text-center
+		button.btn.btn-default(type="submit") speichern
 
 
 include ../inc-mixins
@@ -64,9 +66,9 @@ html(lang="de")
 			h1.page-header.text-center=_Held.Person.Name
 				
 		main.container
-			ul.nav.nav-pills.nav-justified.text-center
+			ul#pagenav.nav.nav-pills.nav-justified.text-center
 				li
-					a#init(href="#Nahkampf", data-toggle="pill") Nahkampf
+					a(href="#Nahkampf", data-toggle="pill") Nahkampf
 				li
 					a(href="#Fernkampf", data-toggle="pill") Fernkampf
 				li
@@ -87,8 +89,9 @@ html(lang="de")
 					a(href="#Gaben", data-toggle="pill") Gaben
 			.row
 				.col-lg-12 &nbsp;
-			.tab-content
-				section#Nahkampf.tab-pane.panel.panel-default.text-center
+			section.tab-content
+				form#Nahkampf.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					.panel-heading
 						.row
 							.col-xs-12.col-sm-5 Talent
@@ -101,26 +104,29 @@ html(lang="de")
 						- var __heldentalent = getTalent(_Held.Talente.Nahkampf, {talent:__talent.name})
 						- var __isAvailable  = isAvailable(_Held.Talente.Nahkampf, __talent)
 						li.list-group-item
-							.row(data-name="Talente.Nahkampf[#{__idx}].Spezialisierung", data-options=__talent.spezialisierungen.join(','))
+							.row(data-name="Talente.Nahkampf[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Nahkampf[#{__idx}]._talent", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente.Nahkampf[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Nahkampf[#{__idx}].name", value=__talent.name)
+										input(type="hidden", name="Talente.Nahkampf[#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Nahkampf[#{__idx}].name", value=__talent.name, id="nk"+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente.Nahkampf[#{__idx}][name]", value=__talent.name, id="nk"+__idx, checked=__isAvailable)
 								.col-xs-11.col-sm-4.text-left
 									label(for="nk"+__idx)=__talent.name
 								.col-xs-3.col-sm-2
-									select.unlock(size="1", name="Talente.Nahkampf[#{__idx}].Lernstufe", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente.Nahkampf[#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2
-									input.nk-at.unlock(type="number", name="Talente.Nahkampf[#{__idx}].AT", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+									input.nk-at.unlock(type="number", name="Talente.Nahkampf[#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
 								.col-xs-3.col-sm-2
-									input.nk-pa.unlock(type="number", name="Talente.Nahkampf[#{__idx}].PA", min="0", max="20", step="1", value=__heldentalent.PA, disabled=!__isAvailable)
+									input.nk-pa.unlock(type="number", name="Talente.Nahkampf[#{__idx}][PA]", min="0", max="20", step="1", value=__heldentalent.PA, disabled=!__isAvailable)
 								.col-xs-3.col-sm-1.nk-taw.text-center=__heldentalent.AT+__heldentalent.PA
+					.panel-footer.text-center
+						button.btn.btn-default(type="submit") speichern
 
-				section#Fernkampf.tab-pane.panel.panel-default.text-center
+				form#Fernkampf.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					.panel-heading
 						.row
 							.col-xs-6.col-sm-8.col-lg-10 Talent
@@ -131,38 +137,46 @@ html(lang="de")
 						- var __heldentalent = getTalent(_Held.Talente.Fernkampf, {talent:__talent.name})
 						- var __isAvailable  = isAvailable(_Held.Talente.Fernkampf, __talent)
 						li.list-group-item
-							.row(data-name="Talente.Fernkampf[#{__idx}].Spezialisierung", data-options=__talent.spezialisierungen.join(','))
+							.row(data-name="Talente.Fernkampf[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Fernkampf[#{__idx}]._talent", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente.Fernkampf[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Fernkampf[#{__idx}].name", value=__talent.name)
+										input(type="hidden", name="Talente.Fernkampf[#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Fernkampf[#{__idx}].name", value=__talent.name, id=__name+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente.Fernkampf[#{__idx}][name]", value=__talent.name, id=__name+__idx, checked=__isAvailable)
 								.col-xs-5.col-sm-7.col-lg-9.text-left
 									label(for=__name+__idx)=__talent.name
 								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Fernkampf[#{__idx}].Lernstufe", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente.Fernkampf[#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Fernkampf[#{__idx}].AT", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+									input.unlock(type="number", name="Talente.Fernkampf[#{__idx}][AT]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+					.panel-footer.text-center
+						button.btn.btn-default(type="submit") speichern
 
-				section#Koerper.tab-pane.panel.panel-default.text-center
+				form#Koerper.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					+talentTable(_körperlich, "körperlich")
 
-				section#Gesellschaft.tab-pane.panel.panel-default.text-center
+				form#Gesellschaft.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					+talentTable(_Gesellschaft, "Gesellschaft")
 
-				section#Wissen.tab-pane.panel.panel-default.text-center
+				form#Wissen.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					+talentTable(_Wissen, "Wissen")
 
-				section#Natur.tab-pane.panel.panel-default.text-center
+				form#Natur.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					+talentTable(_Natur, "Natur")
 
-				section#Handwerk.tab-pane.panel.panel-default.text-center
+				form#Handwerk.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					+talentTable(_Handwerk, "Handwerk")
 
-				section#Sprachen.tab-pane.panel.panel-default.text-center
+				form#Sprachen.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					.panel-heading
 						.row
 							.col-xs-5.col-sm-7.col-lg-9 Sprachen
@@ -176,22 +190,26 @@ html(lang="de")
 						li.list-group-item
 							.row
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Sprachen[#{__idx}]._talent", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente.Sprachen[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente.Sprachen[#{__idx}][Komplexität]", value=__talent.komplexität, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Sprachen[#{__idx}].name", value=__talent.name)
+										input(type="hidden", name="Talente.Sprachen[#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Sprachen[#{__idx}].name", value=__talent.name, id="fk"+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente.Sprachen[#{__idx}][name]", value=__talent.name, id="spr"+__idx, checked=__isAvailable)
 								.col-xs-4.col-sm-6.col-lg-8.text-left
-									label(for="fk"+__idx)=__talent.name
+									label(for="spr"+__idx)=__talent.name
 								.col-xs-1=__talent.komplexität
 								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Sprachen[#{__idx}].Lernstufe", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente.Sprachen[#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Sprachen[#{__idx}].wert", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+									input.unlock(type="number", name="Talente.Sprachen[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
+					.panel-footer.text-center
+						button.btn.btn-default(type="submit") speichern
 
-				section#Schriften.tab-pane.panel.panel-default.text-center
+				form#Schriften.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					.panel-heading
 						.row
 							.col-xs-5.col-sm-7.col-lg-9 Schriften
@@ -205,22 +223,26 @@ html(lang="de")
 						li.list-group-item
 							.row
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Schriften[#{__idx}]._talent", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente.Schriften[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente.Schriften[#{__idx}][Komplexität]", value=__talent.komplexität, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Schriften[#{__idx}].name", value=__talent.name)
+										input(type="hidden", name="Talente.Schriften[#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Schriften[#{__idx}].name", value=__talent.name, id="fk"+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente.Schriften[#{__idx}][name]", value=__talent.name, id="scr"+__idx, checked=__isAvailable)
 								.col-xs-4.col-sm-6.col-lg-8.text-left
-									label(for="fk"+__idx)=__talent.name
+									label(for="scr"+__idx)=__talent.name
 								.col-xs-1=__talent.komplexität
 								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Schriften[#{__idx}].Lernstufe", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente.Schriften[#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Schriften[#{__idx}].wert", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+									input.unlock(type="number", name="Talente.Schriften[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
+					.panel-footer.text-center
+						button.btn.btn-default(type="submit") speichern
 
-				section#Gaben.tab-pane.panel.panel-default.text-center
+				form#Gaben.tab-pane.panel.panel-default.text-center(action="/talente/"+_Held._id, method="post", accept-charset="utf-8")
+					input(type="hidden", name="_method", value="put")
 					.panel-heading
 						.row
 							.col-xs-6.col-sm-8.col-lg-10 Gaben
@@ -231,71 +253,22 @@ html(lang="de")
 						- var __heldentalent = getTalent(_Held.Talente.Gaben, {talent:__talent.name})
 						- var __isAvailable  = isAvailable(_Held.Talente.Gaben, __talent)
 						li.list-group-item
-							.row(data-name="Talente.Gaben[#{__idx}].Spezialisierung", data-options=__talent.spezialisierungen.join(','))
+							.row(data-name="Talente.Gaben[#{__idx}][Spezialisierung]", data-options=__talent.spezialisierungen.join(','))
 								.col-xs-1
-									input.unlock(type="hidden", name="Talente.Gaben[#{__idx}]._talent", value=__talent._id, disabled=!__isAvailable)
+									input.unlock(type="hidden", name="Talente.Gaben[#{__idx}][_talent]", value=__talent._id, disabled=!__isAvailable)
 									if __talent.standard
-										input(type="hidden", name="Talente.Gaben[#{__idx}].name", value=__talent.name)
+										input(type="hidden", name="Talente.Gaben[#{__idx}][name]", value=__talent.name)
 									else
-										input.isactive(type="checkbox", name="Talente.Gaben[#{__idx}].name", value=__talent.name, id="fk"+__idx, checked=__isAvailable)
+										input.isactive(type="checkbox", name="Talente.Gaben[#{__idx}][name]", value=__talent.name, id="fk"+__idx, checked=__isAvailable)
 								.col-xs-5.col-sm-7.col-lg-9.text-left
 									label(for="fk"+__idx)=__talent.name
 								.col-xs-3.col-sm-2.col-lg-1
-									select.unlock(size="1", name="Talente.Gaben[#{__idx}].Lernstufe", disabled=!__isAvailable)
+									select.unlock(size="1", name="Talente.Gaben[#{__idx}][Lernstufe]", disabled=!__isAvailable)
 										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
 											option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === __kat : __talent.stufe === __kat)=__kat
 								.col-xs-3.col-sm-2.col-lg-1
-									input.unlock(type="number", name="Talente.Gaben[#{__idx}].wert", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+									input.unlock(type="number", name="Talente.Gaben[#{__idx}][wert]", min="0", max="20", step="1", value=__heldentalent.AT, disabled=!__isAvailable)
+					.panel-footer.text-center
+						button.btn.btn-default(type="submit") speichern
 
 			script(src="/edit-talente.js")
-			script.
-				$('#init').trigger('click');
-
-//-mixin talenttable(__titel, __data, __name)
-	- var __talente = _held.Talente[__name];
-	table.data-section.eigenschaften
-		caption= __titel
-		colgroup
-			col(style="width: 2em;")
-			col(style="width: 25%;")
-			col
-			col(style="width: 7em;")
-			col(style="width: 7em;")
-		thead
-			tr
-				td
-				th Talent
-				th Spezialisierung
-				th Lern
-				th TaW
-		tbody
-			each __stdTalent, key in __data
-				- var __heldentalent = getTalent(__talente, __stdTalent)
-				- var __isAvailable  = isAvailable(__talente, __stdTalent)
-				unless Array.isArray(__stdTalent.spezialisierungen)
-					- __stdTalent.spezialisierungen = [__stdTalent.spezialisierungen]
-				tr(data-options=__stdTalent.spezialisierungen.join(','), data-name="Talente[#{__name}][#{key}][Spezialisierung]")
-					td.mitte(style="padding: 0.2em;")
-						input.unlock(type="hidden", name="Talente[#{__name}][#{key}][_talent]", value=__stdTalent._id, disabled=!__isAvailable)
-						if __stdTalent.standard
-							input(type="hidden", name="Talente[#{__name}][#{key}][name]", value=__stdTalent.name)
-						else
-							input.isactive(type="checkbox", name="Talente[#{__name}][#{key}][name]", value=__stdTalent.name, id=__name+key, checked=__isAvailable)
-					td
-						label(for=__name+key)= __stdTalent.name
-					td
-						if Array.isArray(__heldentalent.Spezialisierung)
-							each spez in __heldentalent.Spezialisierung
-								.wrapper
-									button.del(type="button")= "\u2717"
-									input.spez(type="text", name="Talente[#{__name}][#{key}][Spezialisierung]", value=spez)
-						button.add(type="button") +
-					td.mitte
-						select.unlock(size="1", name="Talente[#{__name}][#{key}][Lernstufe]", disabled=!__isAvailable)
-							each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-								option(selected=__heldentalent.Lernstufe ? __heldentalent.Lernstufe === kat : __stdTalent.stufe === kat)= kat
-					td.mitte
-						input.unlock(type="number", name="Talente[#{__name}][#{key}][wert]", min="-3", max="35", step="1", value=__heldentalent.wert, disabled=!__isAvailable)
-
-
-		script(src="/edit-talente.js")
